--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "calorie-intake-calculator",
+  "name": "fitness-health-calculations",
   "version": "1.0.0",
-  "description": "Everything you need for quick fitness realted calculations.",
+  "description": "Everything you need for quick fitness related calculations.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +13,5 @@
     "calculator"
   ],
   "author": "Mesic Selim",
-  "license": "ISC"
+  "license": "MIT"
 }
