--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "name": "fitness-health-calculations",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Everything you need for quick fitness related calculations.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha || exit 0"
   },
   "keywords": [
     "fitness",
     "health",
     "calories",
-    "calculator"
+    "calculator",
+    "macronutrients"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SelimMeske/fitness-health-calculations"
+  },
   "author": "Mesic Selim",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.2"
+  }
 }
